--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
