--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
+    "sass": "^1.56.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
