--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "cdbreact": "^1.5.3",
     "circular-json": "^0.5.9",
     "mdb-react-ui-kit": "^5.0.0",
+    "mdbreact": "^5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
