--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.3",
     "circular-json": "^0.5.9",
+    "form-data": "^4.0.0",
     "mdb-react-ui-kit": "^5.0.0",
     "mdbreact": "^5.2.0",
     "prop-types": "^15.8.1",
